# GenFAR_Main

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_inference.py
configs/: model_features.yaml
genfar_inference/: __init__.py  cli.py  config.py  data_io.py  feature_extractor.py  model_loader.py  patch_sampler.py  pipeline.py
